--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -23,8 +25,12 @@
     "sequelize": "^6.20.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.11.38",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16",
     "tslint": "^6.1.3",
     "typescript": "^4.7.2"
